# robust_distributed_mapper

./: .gitignore
cpp/: CMakeLists.txt
cpp/examples/: robust_distributed_optimization_example_2robots.cpp
cpp/include/distributed_mapper/: distributed_mapper.h  distributed_mapper_utils.h  evaluation_utils.h
cpp/include/pairwise_consistency_maximization/distributed_pcm/: distributed_pcm.h
cpp/include/pairwise_consistency_maximization/global_map/: global_map.h
cpp/include/pairwise_consistency_maximization/pairwise_consistency/: pairwise_consistency.h
cpp/include/pairwise_consistency_maximization/robot_measurements/: robot_local_map.h
cpp/src/distributed_mapper/: distributed_mapper.cpp  distributed_mapper_utils.cpp  evaluation_utils.cpp  run_distributed_mapper.cpp
cpp/src/max_clique_finder/: graphIO.cpp
cpp/src/pairwise_consistency_maximization/distributed_pcm/: distributed_pcm.cpp
cpp/src/pairwise_consistency_maximization/global_map/: global_map.cpp
cpp/src/pairwise_consistency_maximization/graph_utils/: graph_utils_functions.cpp
cpp/src/pairwise_consistency_maximization/pairwise_consistency/: pairwise_consistency.cpp
cpp/src/pairwise_consistency_maximization/robot_measurements/: robot_local_map.cpp
cpp/tests/: test_robust_distributed_mapper.cpp
distributed_mapper_core/clean_data/example_2robots/: 0_optimizedTUM.txt  1_optimizedTUM.txt
distributed_mapper_core/clean_data/example_49robots/: 12_optimizedTUM.txt  13_optimizedTUM.txt  14_optimizedTUM.txt  17_optimizedTUM.txt  18_optimizedTUM.txt  2_optimizedTUM.txt  7_optimizedTUM.txt  8_optimizedTUM.txt
distributed_mapper_core/clean_data/example_4robots/: 0_optimizedTUM.txt  1_optimizedTUM.txt  2_optimizedTUM.txt  3_optimizedTUM.txt
distributed_mapper_core/cpp/: CMakeLists.txt
distributed_mapper_core/cpp/examples/: robust_distributed_optimization_example.cpp  robust_distributed_optimization_example_2robots.cpp  runDistributedMapper.cpp
distributed_mapper_core/cpp/include/distributed_mapper/: BetweenChordalFactor.h  DistributedMapper.h  DistributedMapperUtils.h  MultiRobotUtils.h  distributed_mapper.h  distributed_mapper_utils.h  evaluation_utils.h  multi_robot_utils.h  runDistributedMapper.h  run_distributed_mapper.h
distributed_mapper_core/cpp/include/global_map_solver/: global_map_solver.h
distributed_mapper_core/cpp/include/graph_utils/: graph_types.h  graph_utils_functions.h
distributed_mapper_core/cpp/include/pairwise_consistency/: pairwise_consistency.h
distributed_mapper_core/cpp/include/pairwise_consistency_maximization/distributed_pcm/: distributed_pcm.h
distributed_mapper_core/cpp/include/pairwise_consistency_maximization/global_map/: global_map.h
distributed_mapper_core/cpp/include/pairwise_consistency_maximization/graph_utils/: graph_types.h
distributed_mapper_core/cpp/include/pairwise_consistency_maximization/pairwise_consistency/: pairwise_consistency.h
distributed_mapper_core/cpp/include/pairwise_consistency_maximization/robot_local_map/: robot_local_map.h  robot_measurements.h
distributed_mapper_core/cpp/include/pairwise_consistency_maximization/robot_measurements/: interrobot_measurements.h
distributed_mapper_core/cpp/include/robot_local_map/: robot_local_map.h
distributed_mapper_core/cpp/log/: consistency_matrix.clq.mtx  consistent_loop_closures.txt
distributed_mapper_core/cpp/src/distributed_mapper/: DistributedMapper.cpp  DistributedMapperUtils.h  MultiRobotUtils.cpp  distributed_mapper.cpp  distributed_mapper_utils.cpp  evaluation_utils.cpp  multi_robot_utils.cpp  run_distributed_mapper.cpp
distributed_mapper_core/cpp/src/pairwise_consistency_maximization/distributed_pcm/: distributed_pcm.cpp
distributed_mapper_core/cpp/src/pairwise_consistency_maximization/global_map/: global_map.cpp
distributed_mapper_core/cpp/src/pairwise_consistency_maximization/global_map_solver/: global_map_solver.cpp
distributed_mapper_core/cpp/src/pairwise_consistency_maximization/graph_utils/: graph_utils_functions.cpp
distributed_mapper_core/cpp/src/pairwise_consistency_maximization/pairwise_consistency/: pairwise_consistency.cpp
distributed_mapper_core/cpp/src/pairwise_consistency_maximization/robot_local_map/: robot_local_map.cpp  robot_measurements.cpp
distributed_mapper_core/cpp/src/pairwise_consistency_maximization/robot_measurements/: interrobot_measurements.cpp  robot_measurements.cpp
distributed_mapper_core/cpp/tests/: CMakeLists.txt  testBetweenChordalFactor.cpp  testDistributedMapper.cpp  testPairwiseConsistencyMaximization.cpp  testRobustDistributedMapper.cpp  test_between_chordal_factor.cpp  test_distributed_mapper.cpp  test_robust_distributed_mapper.cpp
distributed_mapper_core/doc/: doxygen_entrydb_26288.tmp
distributed_mapper_core/doc/html/: _between_chordal_factor_8h.html  _between_chordal_factor_8h__dep__incl.map  _between_chordal_factor_8h__dep__incl.md5  _between_chordal_factor_8h__incl.map  _between_chordal_factor_8h__incl.md5  _between_chordal_factor_8h_source.html  _c_make_c_compiler_id_8c.html  _c_make_c_x_x_compiler_id_8cpp.html  _distributed_mapper_8cpp.html  _distributed_mapper_8cpp__incl.map  _distributed_mapper_8cpp__incl.md5  _distributed_mapper_8h.html  _distributed_mapper_8h__dep__incl.map  _distributed_mapper_8h__dep__incl.md5  _distributed_mapper_8h__incl.map  _distributed_mapper_8h__incl.md5  _distributed_mapper_8h_source.html  _distributed_mapper_utils_8h.html  _distributed_mapper_utils_8h__dep__incl.map  _distributed_mapper_utils_8h__dep__incl.md5  _distributed_mapper_utils_8h__incl.map  _distributed_mapper_utils_8h__incl.md5  _distributed_mapper_utils_8h_source.html  _multi_robot_utils_8cpp.html  annotated.html  (+153 more)
distributed_mapper_core/log/: consistency_matrix.clq.mtx  consistent_loop_closures.txt
distributed_mapper_core/matlab/: generateSimulationDataset.m
distributed_mapper_core/octave/: generateSimulationDataset.m
log/: consistency_matrix.clq.mtx  consistent_loop_closures.txt
octave/: 0.g2o  generateSimulationDataset.m  plotG2oGraph.m
octave/posegraph_utils/: generateTrajectory.m  readG2oDataset3D.m  rot2quat.m
(+87 files in other folders)
